--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.13'
     compile 'org.springframework:spring-jdbc:4.3.9.RELEASE'
     compile 'org.springframework:spring-webmvc:4.3.9.RELEASE'
+    compile 'org.springframework:spring-test:4.3.9.RELEASE'
     compileOnly 'org.projectlombok:lombok:1.16.18'
     testCompile 'junit:junit:4.12'
 }
